src/test/ui/parser/issue-87217-keyword-order/const-async-const.stderr
error: expected one of `extern`, `fn`, or `unsafe`, found keyword `const`
  --> $DIR/const-async-const.rs:6:13
   |
LL | const async const fn test() {}
   |       ------^^^^^
   |       |     |
   |       |     expected one of `extern`, `fn`, or `unsafe`
   |       help: `const` must come before `async`: `const async`
   |
   = note: keyword order for functions declaration is `default`, `pub`, `const`, `async`, `unsafe`, `extern`

error: aborting due to previous error

